Implemented new endpoint for 'refreshing' a local login.
use case: the access_token is cached in a cookie, and is used to retrieve again the data.

Updated JS and resources for all web apps.

Cleanup and documentation on README files.

/developers updates, and backend datasources updates:
